Resolve issue where icon is too far to right on iphone 4 (#180)
* Resolve issue where icon is too far to right on iphone 4

--- a/src/app/find/locationDetails/locationDetails.css
+++ b/src/app/find/locationDetails/locationDetails.css
@@ -17,11 +17,11 @@
 
 .locationCloseButton {
   position: absolute;
-  right: 17px;
+  right: 27px;
 }
 
 .locationTitle {
-  width: 85%;
+  width: 75%;
   margin-left: auto;
   margin-right: auto;
   font-size: 17px;
